--- a/app/src/main/res/menu/navgation_menu.xml
+++ b/app/src/main/res/menu/navgation_menu.xml
@@ -9,7 +9,7 @@
         android:icon="@drawable/magnifier_icon"
         android:title="" />
     <item
-        android:id="@+id/nav_favourite"
+        android:id="@+id/favouriteFragment"
         android:icon="@drawable/heart_icon"
         android:title="" />
 
