--- a/app/src/main/res/menu/navgation_menu.xml
+++ b/app/src/main/res/menu/navgation_menu.xml
@@ -13,7 +13,7 @@
         android:icon="@drawable/heart_icon"
         android:title="" />
 
-    <item android:id="@+id/nav_calender"
+    <item android:id="@+id/calendarFragment"
         android:icon="@drawable/calender"
         android:title="" />
 
