--- a/app/src/main/res/layout/recycler_search.xml
+++ b/app/src/main/res/layout/recycler_search.xml
@@ -9,33 +9,41 @@
     <androidx.cardview.widget.CardView
         android:layout_width="153dp"
         android:layout_height="180dp"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="4dp"
-        android:backgroundTint="#50598C">
+        android:backgroundTint="#D3CCCC"
+        app:cardCornerRadius="14dp"
+        app:cardElevation="8dp">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/searchImg"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="127dp"
-            android:scaleType="centerCrop"
-            app:shapeAppearanceOverlay="@style/RoundStyle" />
+            android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="62dp"
-            android:layout_gravity="bottom"
-            android:orientation="vertical">
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/searchImg"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="14dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.49"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:shapeAppearanceOverlay="@style/RoundStyle" />
 
             <TextView
                 android:id="@+id/searchName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_width="128dp"
+                android:layout_height="49dp"
+                android:layout_marginTop="14dp"
                 android:fontFamily="@font/poppinssemibold"
                 android:gravity="center"
-                android:textColor="@color/white"
+                android:textColor="@color/main_theme"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/searchImg"
                 tools:text="Vegetarian" />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </FrameLayout>
