--- a/app/src/main/res/menu/navgation_menu.xml
+++ b/app/src/main/res/menu/navgation_menu.xml
@@ -5,7 +5,7 @@
         android:icon="@drawable/home_icon"
         android:title="" />
     <item
-        android:id="@+id/nav_search"
+        android:id="@+id/searchFragment"
         android:icon="@drawable/magnifier_icon"
         android:title="" />
     <item
