--- a/app/src/main/res/layout/recycler_search.xml
+++ b/app/src/main/res/layout/recycler_search.xml
@@ -7,6 +7,7 @@
     android:layout_margin="8dp">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewSearchPage"
         android:layout_width="153dp"
         android:layout_height="180dp"
         android:backgroundTint="#D3CCCC"
