checking connectivity done

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_graph" />
 
-     <com.google.android.material.bottomnavigation.BottomNavigationView
+    <com.google.android.material.bottomnavigation.BottomNavigationView
          android:id="@+id/bottom_nav"
          android:layout_width="match_parent"
          app:itemIconTint="@color/bottom_nav_icon_color"
@@ -25,4 +25,24 @@
          android:layout_gravity="bottom"
          app:menu="@menu/navgation_menu"
          android:visibility="visible" />
+
+    <ImageView
+        android:id="@+id/noConnectionImg"
+        android:scaleType="centerCrop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        app:srcCompat="@drawable/no_connection" />
+
+    <TextView
+        android:id="@+id/noConnectionTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="107dp"
+        android:visibility="visible"
+        android:layout_gravity="center"
+        android:layout_marginBottom="300dp"
+        android:fontFamily="@font/pressstart"
+        android:gravity="center"
+        android:text="@string/no_connection"
+        android:textSize="30sp" />
 </FrameLayout>
