--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -17,9 +17,10 @@
         android:drawableStart="@drawable/_85078_mail_email_icon"
         android:drawablePadding="16dp"
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:paddingStart="10dp"
+        android:paddingEnd="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="224dp"
         android:fontFamily="@font/poppinsextrabold"
-        android:text="MealMe"
+        android:text="@string/mealme"
         android:textColor="@color/white"
         android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -102,9 +103,10 @@
         android:drawableStart="@drawable/username_vector"
         android:drawablePadding="16dp"
         android:ems="10"
-        android:hint="Username"
+        android:hint="@string/username"
         android:inputType="text"
         android:paddingStart="10dp"
+        android:paddingEnd="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
