--- a/app/src/main/res/drawable/g_btn.xml
+++ b/app/src/main/res/drawable/g_btn.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="#1F000000">
 
-    <corners
-        android:radius="10dp"
-        />
-    <solid
-        android:color="#FFFFFF"
-        />
-    <padding
-        android:left="0dp"
-        android:top="0dp"
-        android:right="0dp"
-        android:bottom="0dp"
-        />
-    <size
-        android:width="345dp"
-        android:height="54dp"
-        />
+    <item>
+        <shape android:shape="rectangle">
+            <corners android:radius="10dp" />
+            <solid android:color="#FFFFFF" />
+            <stroke
+                android:width="3dp"
+                android:color="#878787" />
+            <size
+                android:width="345dp"
+                android:height="54dp" />
+        </shape>
+    </item>
 
-</shape>
+</ripple>
