--- a/app/src/main/res/layout/favourite_recycler.xml
+++ b/app/src/main/res/layout/favourite_recycler.xml
@@ -42,10 +42,10 @@
                 android:layout_marginEnd="1dp"
                 android:layout_marginBottom="2dp"
                 android:fontFamily="@font/poppinssemibold"
-                android:gravity="left"
+                android:gravity="start"
                 android:paddingTop="6dp"
                 android:paddingBottom="0dp"
-                android:text="Meal Name"
+                tools:text="Meal Name"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toTopOf="@+id/favType"
@@ -59,7 +59,7 @@
                 android:layout_marginStart="35dp"
                 android:layout_marginBottom="10dp"
                 android:fontFamily="@font/poppinssemibold"
-                android:text="Type"
+                tools:text="Type"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -72,7 +72,7 @@
                 android:layout_marginStart="3dp"
                 android:layout_marginBottom="10dp"
                 android:fontFamily="@font/poppinssemibold"
-                android:text="Country"
+                tools:text="Country"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
