--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -27,12 +27,12 @@
         android:layout_height="51dp"
         android:layout_marginStart="25dp"
         android:layout_marginTop="60dp"
-        android:drawableStart="@drawable/weeksdiet"
         android:drawablePadding="5dp"
         android:fontFamily="@font/poppinsbold"
         android:text="@string/week_s_diet"
         android:textColor="@color/main_theme"
         android:textSize="35sp"
+        app:drawableStartCompat="@drawable/weeksdiet"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
