--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -17,7 +17,7 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/poppinsbold"
         android:padding="5dp"
-        android:text="Your Picks!"
+        android:text="@string/your_picks"
         android:textColor="@color/main_theme"
         android:textSize="40sp"
         app:layout_constraintBottom_toTopOf="@+id/recycler_frag"
