--- a/app/src/main/res/layout/fragment_meal.xml
+++ b/app/src/main/res/layout/fragment_meal.xml
@@ -9,8 +9,7 @@
     android:clipToPadding="false"
     android:paddingBottom="100dp">
 
-
-    <LinearLayout
+ <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -107,14 +106,14 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:fontFamily="@font/poppinsbold"
-                    android:text="Dessert"
+                    tools:text="Dessert"
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toEndOf="@+id/detailsCountryName"
-                    tools:text="Type" />
+                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
@@ -180,6 +179,4 @@
             android:layout_height="wrap_content" />
 
     </LinearLayout>
-
-
 </androidx.core.widget.NestedScrollView>
