--- a/app/src/main/res/layout/home_recycler_row.xml
+++ b/app/src/main/res/layout/home_recycler_row.xml
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppinsbold"
-                android:text="TextView"
+                tools:text="TextView"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="0dp"
                 android:textColor="@color/white"
