--- a/app/src/main/res/layout/recycler_calendar_cards.xml
+++ b/app/src/main/res/layout/recycler_calendar_cards.xml
@@ -42,10 +42,10 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="5dp"
                 android:fontFamily="@font/poppinssemibold"
-                android:gravity="left"
+                android:gravity="start"
                 android:paddingTop="6dp"
                 android:paddingBottom="0dp"
-                android:text="Meal Name"
+                tools:text="Meal Name"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toStartOf="@+id/deleteCalendarBtn"
@@ -59,7 +59,7 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/poppinssemibold"
-                android:text="Country"
+                tools:text="Country"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/calendarMealImg"
@@ -72,7 +72,7 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/poppinssemibold"
-                android:text="Type"
+                tools:text="Type"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/calendarCountry"
