last commit minor cleanups

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -57,15 +57,15 @@
         <TextView
             android:id="@+id/randomMealDesc"
             android:layout_width="354dp"
-            android:layout_height="59dp"
+            android:layout_height="48dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="270dp"
+            android:layout_marginTop="275dp"
             android:ellipsize="end"
             android:fontFamily="@font/poppinsregular"
             android:maxLines="2"
-            tools:text="TextView"
             android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            tools:text="TextView" />
     </androidx.cardview.widget.CardView>
 
     <TextView
